# random-coffee-mvp

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  GETTING-STARTED.md  README.md  pyproject.toml  setup.sh
.beads/: metadata.json
.claude/: hooks.json
.claude/commands/: code-review.md
.github/: pull_request_template.md
.github/workflows/: weekly-random-coffee.yml
config/: participants.yaml  schedule.yaml
data/: history.yaml
docs/: DECISIONS.md  GOOGLE_CALENDAR_PRODUCTION.md  SPEC.md
docs/templates/: review-prompt.md  scenario-test.md  task-brief.md
docs/workflows/: template-workflow.md
examples/: README.md
openspec/specs/random-coffee-mvp/: spec.md
output/mock-calendar-events/: 2026-06-08.json  2026-06-15.json  2026-06-22.json  2026-06-29.json  2026-07-06.json  2026-07-13.json  2026-07-20.json
plans/current/: TEMPLATE.md
scripts/: audit-template.sh
src/random_coffee/: __init__.py  calendar_mock.py  cli.py  config.py  history.py  pairing.py  scheduler.py
tests/: README.md  test_random_coffee.py
tests/integration/: README.md
tests/scenarios/: README.md
tests/unit/: README.md
