[project]
name = "random-coffee-mvp"
version = "0.1.0"
description = "GitHub Actions driven random coffee scheduler MVP with mock calendar output"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0.2",
]

[dependency-groups]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.6.0",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []
